--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -41,7 +41,7 @@ public with sharing class SummitEventsConfirmationController {
                 eventStartDateTimeCrumb = evtInstance.Start_Date_Time__c.format('MMMM d, YYYY, h:mm a') + ' - ' + evtInstance.End_Date_Time__c.format('h:mm a');
             }
 
-            navBreadCrumb = SEShared.navBreadcrumbBuilder(evtInstance);
+            navBreadCrumb = SEShared.navBreadcrumbBuilder(evtInstance,false);
 
         }
 
